# layout-trait

./: Cargo.toml  README.md
examples/: custom.rs  enum.rs  enum_derive.rs  ex1.rs  ex2.rs  generic.rs  generic2.rs  generic_proxy.rs  mix2.rs
src/: lib.rs
