[package]
name = "layout-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
layout-derive = {git = "https://github.com/perlindgren/layout-derive", optional = true}

[features]
derive=["dep:layout-derive"]
