[package]
name = "layout-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
layout-derive = {git = "https://github.com/ivajon/layout-derive", optional = true}

[dev-dependencies]
heapless = "0.8.x"


[features]
derive=["dep:layout-derive"]
default = ["derive"]
